# minds

./: .gitignore  cognee-rust-mcp-api-spec.md
cognee/: README.md
cognee-integrations/: .gitignore
cognee-integrations/.github/workflows/: dify-plugin-publish.yml
cognee-integrations/integrations/claude-code/: AFTER_INSTALL_MCP.md  README.md  RUST_PLUGIN_MIGRATION_PLAN.md
cognee-integrations/integrations/claude-code/.claude-plugin/: plugin.json
cognee-integrations/integrations/claude-code/agents/: cognee-recall.md
cognee-integrations/integrations/claude-code/hooks/: hooks.json
cognee-integrations/integrations/claude-code/scripts/: cognee-search.sh
cognee-integrations/integrations/codex/rust-mcp/: Cargo.toml
cognee-integrations/integrations/google-adk/: .env.example  README.md
cognee-integrations/integrations/openclaw/: cognee-docker-compose.yaml  index.ts  openclaw.plugin.json  package-lock.json
cognee-integrations/scripts/: check_version_pins.py
cognee-mcp/: .gitignore  Cargo.toml  README.md  build.rs
cognee-mcp/scripts/: recall_shootout.ps1
cognee-mcp/src/: arguments.rs  main.rs  markdown.rs  mcp.rs  plugin.rs  read_model.rs  settings.rs  tools.rs  uploads.rs
cognee-mcp/tests/: mcp_contract.rs
cognee/cognee-frontend/: package-lock.json
notion-cognee-ingest/: README.md  ingest_notion_to_cognee.py  notion_pipeline.py
notion-cognee-ingest/exported-corpus/: 2026-05-10-stephen-ideas-codex-export.md
notion-cognee-ingest/exported-corpus/notion-attachments/: CODING_STANDARDS.md  SKILL.md
(+25 files in other folders)
